Updating Switch-Custom-Device for VeriStand 2016 to build number 1.

--- a/configuration_2016.toml
+++ b/configuration_2016.toml
@@ -1,5 +1,5 @@
 [repositories.commonbuild-configuration]
 
 [repositories.Switch-Custom-Device]
-build_number = 0
-release_branches = ["master"]
+release_branches = [ "master",]
+build_number = 1
