--- a/configuration_2016.toml
+++ b/configuration_2016.toml
@@ -1,3 +1,6 @@
+[repositories.group-switching-custom-device]
+build_number = 0
+
 [repositories.commonbuild-configuration]
 
 [repositories.Switch-Custom-Device]
