Added master releases for load, vdt, and group switching

--- a/configuration_2016.toml
+++ b/configuration_2016.toml
@@ -1,10 +1,13 @@
 [repositories.BCI-SLSC-LOAD]
+release_branches = [ "master",]
 build_number = 0
 
 [repositories.BCI-SLSC-VDT]
+release_branches = [ "master",]
 build_number = 0
 
 [repositories.group-switching-custom-device]
+release_branches = [ "master",]
 build_number = 0
 
 [repositories.commonbuild-configuration]
