--- a/configuration_2017.toml
+++ b/configuration_2017.toml
@@ -4,6 +4,9 @@ build_number = 17
 [repositories.BCI-SLSC-VDT]
 build_number = 14
 
+[repositories.BCI-LOAD-TEMP]
+build_number = 0
+
 [repositories.group-switching-custom-device]
 build_number = 16
 
